feat: Home page with links and TeamPage with url parameters

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -17,7 +17,7 @@
     "jsx": "react-jsx",
 
     /* Linting */
-    "strict": true,
+    // "strict": true, // --> Turn on later
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
